# cpp-mcp

./: CMakeLists.txt
src/: CMakeLists.txt
